# public

QTBUG-14702/: BUILD.bat  QTBUG-14702.pro  main.cpp
QTBUG-63772/: BUILD.bat  QTBUG-63772.pro  main.cpp
QTBUG-82883/: IdlVersion.pro  main.cpp
QtTestCon/: 0001-Extend-TestCon-with-AppContainer-sandboxing.patch  CMakeLists.txt  mainwindow.cpp
cmake-qt-codegen/: CMakeLists.txt  GENERATE_WINDOWS.bat
comtypes-64bit/: PyComServer.idl  PyComServer.py  RUN_TEST.bat  comtypes-64bit.pyproj  comtypes-64bit.sln
dgagent-problem/: README.md
nonwin-com/: IdlParse.py  NonWindows.cpp  NonWindows.hpp
